# jsonprofile

./: .gitignore  .pre-commit-config.yaml  README.md  build_policies.sh  justfile  mkdocs.yml  mzTab_2_1-M.json  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  index.md
docs/model/: Assay.md  CV.md  ColumnParameterMapping.md  Comment.md  Contact.md  Database.md  ExtendedParameter.md  Instrument.md  Metadata.md  MsRun.md  MzTabM.md  OptColumnMapping.md  Parameter.md  Protocol.md  Publication.md  PublicationItem.md  Sample.md  SampleProcessing.md  SmallMoleculeEvidence.md  SmallMoleculeFeature.md  SmallMoleculeSummary.md  Software.md  SpectraRef.md  SpectraReference.md  StudyVariable.md  StudyVariableGroup.md  Uri.md
docs/source/: conf.py
docs/stylesheets/: extra.css
java/: build.gradle.kts  gradle.properties  settings.gradle.kts
java/src/main/java/dev/jsonprofile/: JsonProfile.java
java/src/test/java/dev/jsonprofile/: ConformanceSmokeTest.java  JsonProfileTest.java
mztab_m_io/: __init__.py  mztabm_loader.py  profile_validator.py  utils.py
mztab_m_io/model/: __init__.py  base.py  common.py  field_utils.py  mztabm.py  mztabm_parser_utils.py  mztabm_validation.py  serialization.py  validation.py
mztab_m_io/model/section/: base_table_section.py  mtd.py  sme.py  smf.py  sml.py
mztab_m_io/profile/: __init__.py  default_profile.py  full_profile.py  metabolights_profile.py  mtd_smf_profile.py  mtd_sml_profile.py
mztab_m_io/resources/: mztabm-2.1.0-M.schema.json
mztab_m_io/resources/opa_policies/mztabm/config/: column_counts.json  id_references.json  opt_references.json  required_ids.json
mztab_m_io/resources/opa_policies/mztabm/definitions/: column_counts.rego  missing_reference_ids.rego  undefined_ids.rego  unreferenced_targets.rego
mztab_m_io/resources/opa_policies/mztabm/policies/: evaluation.rego
mztab_m_io/resources/opa_policies/mztabm/utils/: utils.rego
mztab_m_io/resources/profiles/: mztabm-default-profile-2.1.0-M.json  mztabm-full-profile-2.1.0-M.json  mztabm-metabolights-profile-2.1.0-M.json
mztab_m_io/schema/: mztabm.schema-2.1.0-M.json
mztabm/: __init__.py
mztabm/model/: __init__.py  common.py  field_utils.py  mztabm.py  serialization.py  validation.py
mztabm/model/section/: base_table_section.py  mtd.py  sme.py  smf.py  sml.py
mztabm/schema/: mztabm.schema-2.1.json
python/: README.md  pyproject.toml  setup.cfg  uv.toml
python/src/jsonprofile/: __init__.py  utils.py
python/src/jsonprofile/profile/: __init__.py  base.py  constraints.py  model.py  profile_validator.py
python/src/jsonprofile/profile/constraints/: __init__.py  constraints.py
python/src/jsonprofile/profile/model/: __init__.py
python/src/jsonprofile/validator/: __init__.py  abstract_checker.py  base.py  context.py  custom_checker.py  decorators.py  default.py  default_checker.py  json_validator.py  opa_engine.py
python/src/jsonprofile/validator/checkers/: __init__.py  custom_checker.py  default_checker.py
python/src/jsonprofile/validator/default/: __init__.py  ols_cv_term_search.py  profile_validator.py  profile_validator_factory.py
python/tests/: test_conformance.py  test_import.py  test_jsonschema_rs_validation.py  test_mztabm_profile.py  test_opa_engine.py
python/tests/data/: manual_null_MTBLS263.mztab.json
python/tests/resources/: mztabm-default-2.1.0-M.wasm  mztabm-schema-2.1.0-M.json  mztabm.schema-2.1.0-M.json
python/tests/resources/profiles/: mztabm-default-profile-2.1.0-M.json  mztabm-metabolights-profile-2.1.0-M.json  mztabm-mtd_smf-profile-2.1.0-M.json  mztabm-mtd_sml-profile-2.1.0-M.json  mztabm-profile-2.1.0-M.schema.json
scripts/: check_opa_policy.py  create_model.py  read.py  update_documentation.py  update_schema.py  utils.py
shared/conformance/: smoke.json
shared/fixtures/: minimal-valid-profile.json  missing-required-profile-name.json
shared/schema/: jsonprofile.schema.json
shared/spec/: README.md
tests/data/example/: example.json  example.mztab  example.yaml  example2.mztab
tests/data/mztabm/: lipidcompass-script_226ea96_MTD_SML_LCS-00001-01.mztab  manual_null_MTBLS263.mztab  manual_null_null_minimal_example.mztab  msdial_4_gcms_tms_height_mzTab.mztab  msdial_5.5.251021GUI_Area_zenodo14263441.mztab  msdial_5.5.251021GUI_Height_zenodo14263441.mztab  msdial_5console_zenodo14263441.mztab
tests/mztabm/: create_full_mztabm.py  mztabm_feature.py  test_mztabm.py  test_mztabm_class.py  test_rw_compare.py
tests/mztabm/test__init__.py/: test_init__.py
tutorials/examples/: example_01.py  example_02.py
