[project]
name = "pymztab-m-iaaiaaspdr"
version = "0.1.0"
description="The Python3 language bindings for mzTab-M"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.3.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.3",
]
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.14.4",
    "uv-build>=0.9.8",
    "mkdocs-material>=9.7.0",
]
[tool.ruff]
target-version = "py39"
cache-dir = ".cache/.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "W", "N", "C90"]
ignore = ["E501", "C901"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mztab_m_io*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"mztab_m_io" = ["**/*.json"]
