[project]
name = "pymztabm"
version = "0.1.0"
description="The Python3 language bindings for mzTab-M"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "jsonschema>=4.26.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
]
[dependency-groups]
dev = [
    "pre-commit>=3.10.1",
    "pytest>=9.0.3",
    "ruff>=0.14.4",
    "uv-build>=0.9.8",
    "mkdocs-material>=9.7.0",
]
[tool.ruff]
target-version = "py310"
cache-dir = ".cache/.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "C", "I", "G", "SLF", "PTH", "Q", "T"]
ignore = [ "C901"]

fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mztab_m_io*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"mztab_m_io" = ["**/*.json"]
